<resources>
    <string name="app_name">Assignment001</string>
    <string name="login">Log in</string>
    <string name="userlogin">User Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="userprofile">User Profile</string>
    <string name="fname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="nic">NIC</string>
    <string name="editdetail">Edit Detail</string>
    <string name="vieworders">View Orders</string>
    <string name="edittprofile">Edit Profile</string>
    <string name="age">Age</string>
    <string name="email">E mail</string>
    <string name="save">Save Detail</string>
    <string name="back">Cancel</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="orderid">Order ID</string>
    <string name="daddress">Delivery Address</string>
    <string name="pickupdate">Pickup Date</string>
    <string name="paddress">Pickup Address</string>
</resources>
