<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/lobster"
                android:text="@string/edittprofile"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="24sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="10dp">


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/vigo"
                        android:text="@string/fname"
                        android:textColor="@color/gray" />

                    <EditText
                        android:id="@+id/ep_fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:fontFamily="@font/vigo"
                        android:inputType="textPersonName"
                        android:text="@null"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/vigo"
                        android:text="@string/lastname"
                        android:textColor="@color/gray" />

                    <EditText
                        android:id="@+id/ep_lname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:fontFamily="@font/vigo"
                        android:inputType="textPersonName"
                        android:text="@null"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/vigo"
                        android:text="@string/nic"
                        android:textColor="@color/gray" />

                    <EditText
                        android:id="@+id/ep_nic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:fontFamily="@font/vigo"
                        android:inputType="textPersonName"
                        android:text="@null"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/vigo"
                        android:text="@string/age"
                        android:textColor="@color/gray" />

                    <EditText
                        android:id="@+id/ep_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:fontFamily="@font/vigo"
                        android:inputType="number"
                        android:text="@null"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/vigo"
                        android:text="@string/email"
                        android:textColor="@color/gray" />

                    <EditText
                        android:id="@+id/ep_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:editable="false"
                        android:ems="10"
                        android:fontFamily="@font/vigo"
                        android:inputType="text|textEmailAddress"
                        android:text="@null"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/vigo"
                        android:text="@string/password"
                        android:textColor="@color/gray" />

                    <EditText
                        android:id="@+id/ep_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:fontFamily="@font/vigo"
                        android:inputType="textPassword"
                        android:text="@null"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/acceptbtn"
                android:fontFamily="@font/vigo"
                android:text="@string/save"
                android:textColor="@color/cardview_light_background"
                android:onClick="saveInfo"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/cancelbtn"
                android:fontFamily="@font/vigo"
                android:text="@string/back"
                android:textColor="@color/cardview_light_background"
                android:onClick="backtoProfile"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>